// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly 1`] = `
<Button
  className="btn"
  type="button"
  value="login"
>
  <button
    className="btn btn"
    type="button"
  >
    login
  </button>
</Button>
`;

exports[`Button should render correctly 2`] = `
<Button
  className="btn"
  type="button"
>
  <button
    className="btn btn"
    type="button"
  >
    hey
  </button>
</Button>
`;
